# paprika

./: .gitignore  LICENSE  README.md  contributing.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: add_llm_client.md  bug_report.md  feature_request.md
.github/workflows/: backend-tests.yml
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  DockerFile  Dockerfile  Makefile  README.md  config.alloy  docker-compose.yml  langgraph.json  pyproject.toml  run_graph.py
backend/.langgraph_api/: .langgraph_ops.pckl
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: c4f42a01ff05_init.py
backend/app/: config.py  deps.py  lifecycle.py  main.py
backend/app/agent/: graph.py  prompts.py
backend/app/agent/nodes/: decide.py
backend/app/agents/: action.py  adapter.py  base.py  critic.py  curriculum.py  graph.py  skill.py  state.py
backend/app/agents/nodes/: decide.py
backend/app/api/: routes.py  schemas.py
backend/app/context/: view.py
backend/app/core/: config.py  deps.py  exceptions.py  lifecycle.py  logger.py
backend/app/core/db/: __init__.py  bootstrap.py  repository.py  session.py
backend/app/llm/: __init__.py  base.py  embeddings.py  generic_openai_client.py  ollama_client.py  openai_client.py
backend/app/memory/: base.py  memory_manager.py  memory_repo.py  models.py  pgvector_repo.py  vector.store.py  vector_store.py
backend/app/memory/embedding/: base.py  strategy.py
backend/app/prompts/: loader.py  prompts.py
backend/app/prompts/templates/: action.md  critic.md  curriculum.md  perception.md  perception_send_from_unity_example.txt  skill.md  system_main.md  unity_setting.md
backend/app/tools/: __init__.py  base.py  context.py  schemas.py
backend/app/tools/internal/: __init__.py  basic_actions.py  basic_actions_bak.py
backend/scripts/: run_graph.py
backend/tests/: conftest.py  test_llm.py  test_llm_live.py  test_memory_repo.py  test_ollama_llm.py  test_weather_tool.py  test_weather_tool_live.py
backend/tests/agents/: test_action_integration.py  test_action_integration_live.py  test_critic_integation.py  test_curriculum_integration.py  test_skill_integration.py
backend/tests/api/: test_routes.py
backend/tests/llm/: test_ollama_llm.py  test_openai_llm.py  test_openai_llm_live.py
backend/tests/memory/: test_memory_repo.py
backend/tests/tools/: test_weather_tool.py  test_weather_tool_live.py
docs/backend/: ADR-001-langgraph-multi-agent-orchestration.md  ADR-002-voyager-inspired-feedback-loop.md  ADR-003-affordance-driven-context-saycan.md  ADR-004-websocket-unity-communication.md  ADR-005-action-end-boundary.md  ADR-006-llm-provider-registry.md  ADR-007-pgvector-episodic-skill-memory.md  ADR-008-defensive-json-parsing.md  ADR-009-tool-registry-pattern.md  ADR-010-three-phase-curriculum-decomposition.md  ADR-011-multi-actor-memory-schema.md  ADR-012-core-module-layout.md  ADR-013-stateless-agents-single-graph.md  diagram-async-fastapi.md  (+1 more)
frontend/: .gitignore
(+354 files in other folders)
