[project]
name = "paprika-agent-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.124.0",
    "greenlet>=3.3.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "openai>=2.9.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-recording>=0.13.4",
    "ruff>=0.14.9",
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "paid: tests that call paid APIs",
]

[tool.ruff]
# 1. Target Python version (adjust to match your project)
target-version = "py311"

# 2. Line length: 88 is standard (Black style), 120 is common for modern screens
line-length = 88

[tool.ruff.lint]
# Conservative, logic-safe linting
select = [
  "E",  # syntax / indentation errors
  "W",  # whitespace warnings (safe)
  "F",  # real errors (undefined names, etc.)
  "B",  # likely bugs (no logic rewrite)
  "I",  # import order checks (no auto-fix in check mode)
]

# Ignore rules that conflict with framework / pattern code
ignore = [
  "E501",  # long lines (prompts, JSON, SQL)
  "F401",  # unused imports (often intentional side effects)
  "F841",  # unused variables (hooks, placeholders)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"